better match expected shape of input data
(the number of care homes to have discharges and/or cases is given
so use that information to match)

--- a/generate_test_data.ipynb
+++ b/generate_test_data.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,16 +77,18 @@
     "for sample_array in cases, discharges, covariates:\n",
     "    sample_array[0] = rng.permutation(care_home_ids)\n",
     "    \n",
-    "for sample_array, num_instances in (cases, N_CASES), (discharges, N_DISCHARGES):\n",
+    "for sample_array, num_instances, num_places in (\n",
+    "        (cases, N_CASES, N_CASE_HOMES), (discharges, N_DISCHARGES, N_DISCHARGE_HOMES)\n",
+    "):\n",
     "    for _ in range(num_instances):\n",
-    "        sample_array[1 + rng.integers(N_DAYS), rng.integers(N_CARE_HOMES)] += 1\n",
+    "        sample_array[1 + rng.integers(N_DAYS), rng.integers(num_places)] += 1\n",
     "\n",
     "covariates[1] = rng.choice(MAX_CATEGORIES, size=N_CARE_HOMES)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,13 +96,6 @@
     "np.savetxt(\"cases.csv\", cases, fmt=\"%d\", delimiter=',')\n",
     "np.savetxt(\"discharges.csv\", discharges, fmt=\"%d\", delimiter=',')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
