add a smaller, but still reasonably representative, set of test data

--- a/generate_test_data.ipynb
+++ b/generate_test_data.ipynb
@@ -18,38 +18,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "MAX_BEDS_PER_HOME = 255\n",
     "MAX_CATEGORIES = 4\n",
     "\n",
-    "N_CARE_HOMES = 1000\n",
-    "N_CASES = 2000\n",
-    "N_CASE_HOMES = 330\n",
-    "N_DISCHARGES = 3000\n",
-    "N_DISCHARGE_HOMES = 500\n",
-    "N_DAYS = 181\n",
-    "N_COVARIATES = 1"
+    "FILE_SUFFIX = ''\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
+    "if FILE_SUFFIX == '':\n",
+    "    N_CARE_HOMES = 1000\n",
+    "    N_CASES = 2000\n",
+    "    N_CASE_HOMES = 330\n",
+    "    N_DISCHARGES = 3000\n",
+    "    N_DISCHARGE_HOMES = 500\n",
+    "    N_DAYS = 181\n",
+    "    N_COVARIATES = 1\n",
     "\n",
-    "def get_dtype(max_value):\n",
-    "    if max_value < 256:\n",
-    "        return np.int8\n",
-    "    else:\n",
-    "        return np.int32\n",
-    "\n",
-    "BED_DTYPE = get_dtype(MAX_BEDS_PER_HOME)\n",
-    "CAT_DTYPE = get_dtype(MAX_CATEGORIES)\n"
+    "elif FILE_SUFFIX == '_medium':\n",
+    "    N_CARE_HOMES = 100\n",
+    "    N_CASES = 200\n",
+    "    N_CASE_HOMES = 33\n",
+    "    N_DISCHARGES = 300\n",
+    "    N_DISCHARGE_HOMES = 50\n",
+    "    N_DAYS = 18\n",
+    "    N_COVARIATES = 1"
    ]
   },
   {
@@ -58,6 +59,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import numpy as np\n",
+    "\n",
     "cases = np.zeros((N_DAYS+1, N_CARE_HOMES), dtype=np.int32)\n",
     "discharges = np.zeros((N_DAYS+1, N_CARE_HOMES), dtype=np.int32)\n",
     "covariates = np.zeros((N_COVARIATES+1, N_CARE_HOMES), dtype=np.int32)"
@@ -92,10 +95,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.savetxt(\"covariates.csv\", covariates, fmt=\"%d\", delimiter=',')\n",
-    "np.savetxt(\"cases.csv\", cases, fmt=\"%d\", delimiter=',')\n",
-    "np.savetxt(\"discharges.csv\", discharges, fmt=\"%d\", delimiter=',')"
+    "np.savetxt(f\"covariates{FILE_SUFFIX}.csv\", covariates, fmt=\"%d\", delimiter=',')\n",
+    "np.savetxt(f\"cases{FILE_SUFFIX}.csv\", cases, fmt=\"%d\", delimiter=',')\n",
+    "np.savetxt(f\"discharges{FILE_SUFFIX}.csv\", discharges, fmt=\"%d\", delimiter=',')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -114,7 +124,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
